# miniLaska

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  annotated.html  classes.html  constants_8h.html  constants_8h__dep__incl.dot  constants_8h__dep__incl.map  constants_8h__dep__incl.md5  constants_8h_source.html  cvector_8h.html  cvector_8h__dep__incl.dot  cvector_8h__dep__incl.map  cvector_8h__dep__incl.md5  cvector_8h__incl.dot  cvector_8h__incl.map  cvector_8h__incl.md5  cvector_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  logic_8c.html  logic_8c__incl.dot  logic_8c__incl.map  logic_8c__incl.md5  logic_8h.html  logic_8h__dep__incl.dot  logic_8h__dep__incl.map  logic_8h__dep__incl.md5  (+49 more)
.github/workflows/: generateDocumentation.yml  runTests.yml
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.html  all_d.js  all_e.html  all_e.js  all_f.html  all_f.js  classes_0.js  classes_1.js  classes_2.html  classes_2.js  defines_0.html  defines_0.js  defines_1.html  defines_1.js  defines_2.html  defines_2.js  defines_3.html  defines_3.js  defines_4.html  defines_4.js  defines_5.html  defines_5.js  defines_6.html  defines_6.js  defines_7.html  defines_7.js  defines_8.html  (+56 more)
src/: constants.h  cvector.h  logic.c  logic.h  main.c  terminal.c  terminal.h  utility.c  utility.h
test/: apply_move_test.c  clone_board_test.c  compute_state_test.c  does_move_eat_test.c  get_index_from_coordinates_test.c  get_possible_moves.c  is_pos_valid_test.c  logic_test.c  minimax_test.c  pos_conversion.c
tests/: logic_test.c  minunit.h
